use List.of instead of new ArrayList ...